--- a/Task-2/index.html
+++ b/Task-2/index.html
@@ -5,18 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Task 1</title>
+    <title>Task 2</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <div class="container">
-        <input type="text" id="myInput">
-        <button id="addBtn"> Add</button>
-        <ul id="myList">
-        </ul>
-    </div>
-    <script src="script.js"></script>
+    <div><a href="todos">Todos</a>|<a href="myList">My List</a></div>
+    <h1>Home Page</h1>
 </body>
 
 </html>
